--- a/Projeto/src/app/views/user_register_form.ejs
+++ b/Projeto/src/app/views/user_register_form.ejs
@@ -19,14 +19,14 @@
     <div class="left"></div>
 
     <div class="forms" style="background-color:#90b1df">
-      <h3>User Register Form</h3>      
+      <h3>Registro de usuário</h3>      
       <form id="connection-form" action="/user_register" method="get">
         <!--<input type="hidden" id="webserver-ip-input" name="webserver-ip-input" value=<%= wsa %>>-->
         <!--<input type="hidden" id="webserver-port-input" name="webserver-port-input" value=<%= wsp %>>-->
-        <input id="name" name="name"  placeholder="nickname" style="width:50%; margin: 2px" autofocus required></input>
-        <input id="email" name="email" placeholder="email" style="width:50%; margin: 2px" required type="email" ></input><br>
-        <input id="password" name="password" placeholder="password" style="width:50%; margin: 2px" required type="password" minlength="5"></input><br>
-        <button id="connection-btn" type="submit" style="margin: 5px">register</button>
+        <input id="name" name="name"  placeholder="Apelido" style="width:50%; margin: 2px" autofocus required></input>
+        <input id="email" name="email" placeholder="E-mail" style="width:50%; margin: 2px" required type="email" ></input><br>
+        <input id="password" name="password" placeholder="Senha" style="width:50%; margin: 2px" required type="password" minlength="5"></input><br>
+        <button id="connection-btn" type="submit" style="margin: 5px">Registrar</button>
       </form>     
     </div>
 
@@ -35,7 +35,7 @@
   </div>
 
   <div id="status" style="background-color:#90b1df;text-align:center;padding:10px;margin-top:7px;">
-    <a href="/user_login_form"> login </a>
+    <a href="/user_login_form"> Faça login </a>
   </div>
 
 </body>
