--- a/Projeto/src/app/views/match_edit_form.ejs
+++ b/Projeto/src/app/views/match_edit_form.ejs
@@ -23,7 +23,7 @@
       <ul>
         <li> 
           <Div>
-            <a href="/match_register_form" > New... </a>
+            <a href="/match_register_form" > Novo... </a>
           </Div>            
         </li>
         <% if (user_matches != undefined) { %>
@@ -39,11 +39,11 @@
     </div>
 
     <div class="forms" style="background-color:#90b1df">
-      <h3>Edit '<%= user_matches[match_key].name %>' </h3>
+      <h3>Editar '<%= user_matches[match_key].name %>' </h3>
       <form id="match_edit" action=<%= "/match_edit?match_key=" + match_key %> method="get">
 
         <Div style="text-align: left;">
-          <label for="name"> Match name</label>
+          <label for="name"> Nome da Match</label>
           <input id="name" name="name" placeholder="match name" style="margin: 2px" autofocus required type="text" value= '<%= user_matches[match_key].name %>' ></input><br>
           
           <% if(user_matches[match_key].config.show_options){ %>
@@ -51,35 +51,35 @@
           <% } else{ %>  
             <input type="checkbox" id="checkbox1" name="checkbox1" value="0">
          <% } %>          
-          <label for="checkbox1"> Show options in shooting state</label><br>
+          <label for="checkbox1"> Mostrar alternativas enquanto ainda não foi clicado o botão de responder</label><br>
 
           <% if(user_matches[match_key].config.start_match_upon_completing_registration){ %>
             <input type="checkbox" id="checkbox2" name="checkbox2" value="0" checked>
           <% } else{ %>  
             <input type="checkbox" id="checkbox2" name="checkbox2" value="0">
          <% } %>          
-          <label for="checkbox2"> Start match upon completing registration</label><br>
+          <label for="checkbox2"> Começar match assim que o registro for completo</label><br>
 
-          <label for="quantity1">Minimum number of players</label>
+          <label for="quantity1"> Número mínimo de jogadores</label>
           <input type="number" id="quantity1" name="quantity1" min="1" max="50" value='<%= user_matches[match_key].config.min_amount_players %>'><br>
-          <label for="quantity2">Maximum number of players</label>
+          <label for="quantity2"> Número máximo de jogadores</label>
           <input type="number" id="quantity2" name="quantity2" min="1" max="50" value='<%= user_matches[match_key].config.max_amount_players %>'><br>
-          <label for="quantity3">Waiting time for registration at match (seconds)</label>
+          <label for="quantity3"> Tempo de espera para registro dos usuários na match (em segundos)</label>
           <input type="number" id="quantity3" name="quantity3" min="30" max="300" value='<%= user_matches[match_key].config.wait_to_registry_at_match_time/1000 %>'><br>
-          <label for="quantity4">Waiting time for the start of the match (seconds)</label>
+          <label for="quantity4"> Tempo de espera para o começo da match (em segundos)</label>
           <input type="number" id="quantity4" name="quantity4" min="30" max="300" value='<%= user_matches[match_key].config.wait_to_start_match_time/1000 %>'><br>
           <!-- <label for="quantity5">Wait time to shooting (seconds)</label>
           <input type="number" id="quantity5" name="quantity5" min="30" max="300"><br> -->
-          <label for="quantity6">Waiting time to start the next round (seconds)</label>
+          <label for="quantity6"> Tempo de espera para o começo do próximo round (em segundos)</label>
           <input type="number" id="quantity6" name="quantity6" min="30" max="300" value='<%= user_matches[match_key].config.wait_to_next_round_start_time/1000 %>'><br>
-          <label for="quantity7">Waiting time to resume the round (seconds)</label>
+          <label for="quantity7"> Tempo de espera para o resumo do round (em segundos)</label>
           <input type="number" id="quantity7" name="quantity7" min="30" max="300" value='<%= user_matches[match_key].config.wait_to_round_resume_time/1000 %>'><br>
-          <label for="quantity8">Waiting time to end the match (seconds)</label>
+          <label for="quantity8"> Tempo de espera para o fim da match (em segundos)</label>
           <input type="number" id="quantity8" name="quantity8" min="30" max="300" value='<%= user_matches[match_key].config.wait_to_match_end_time/1000 %>'><br>
-          <label for="quantity9">Waiting time to destroy the match (seconds)</label>
+          <label for="quantity9"> Tempo de espera para apagar a match (em segundos)</label>
           <input type="number" id="quantity9" name="quantity9" min="30" max="300" value='<%= user_matches[match_key].config.wait_to_match_abort_time/1000 %>'><br>
         </Div>
-        <button id="register_btn" type="submit" style="width:50%; margin: 5px">Register</button>
+        <button id="register_btn" type="submit" style="margin: 10px">Editar</button>
       </form>
     </div>
 
@@ -88,7 +88,7 @@
       <ul>
         <li> 
           <Div>
-            <a href= <%= "/round_register_form?match_key=" + match_key %>> New... </a>
+            <a href= <%= "/round_register_form?match_key=" + match_key %>> Novo... </a>
           </Div>            
         </li>
         <% if (user_matches != undefined && match_key in user_matches) { %>
@@ -110,11 +110,11 @@
     <% if (user != undefined) { %>
       <p style="margin: 0px;padding: 0;"> <%= user.name %> </p>
       <p style="font-size:50%;margin: 0px;padding: 0;"> <%= user.email %> </p>
-      <a href="/user_logout"> logout </a>
+      <a href="/user_logout"> Sair </a>
       <%} else { %> 
         <p style="margin: 0px;padding: 0;">
-          <a style="margin: 0px;padding: 0;" href="/user_login_form"> login </a> or
-          <a style="margin: 0px;padding: 0;" href="/user_register_form"> register </a>
+          <a style="margin: 0px;padding: 0;" href="/user_login_form"> Faça login </a> or
+          <a style="margin: 0px;padding: 0;" href="/user_register_form"> Registre-se </a>
         </p>
       <% } %>
   </div>
