--- a/Projeto/src/app/views/match_home.ejs
+++ b/Projeto/src/app/views/match_home.ejs
@@ -25,7 +25,7 @@
       <ul style="list-style-type: none; margin: 10px;padding: 0;">
         <li> 
           <Div  style="padding-bottom: 10px ;">
-            &#x1F4C4; <a href="/match_register_form" >New...</a>
+            &#x1F4C4; <a href="/match_register_form" >Novo...</a>
           </Div>            
         </li>
         <% if (user_matches != undefined) { %>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="main">
-      <p>In this site, you can manage your matches.</p>
+      <p>Nessa página, você pode gerenciar suas matches (partidas).</p>
     </div>
 
    
