--- a/Projeto/src/app/views/match_register_form.ejs
+++ b/Projeto/src/app/views/match_register_form.ejs
@@ -22,11 +22,11 @@
   <div  style="overflow:auto;background-color:#90b1df;margin-top:7px;">
 
     <div class="left" style="background-color:#90b1df">
-      <h3 style="margin: 0px;padding: 0;"><a href="/quiz_view" style="text-decoration: none;">&#x1F519</a>  Quizzes</h3>
+      <h3 style="margin: 0px;padding: 0;"><a href="/match _view" style="text-decoration: none;">&#x1F519</a>  Matches</h3>
       <ul style="list-style-type: none; margin: 10px;padding: 0;">
         <li> 
           <Div  style="padding-bottom: 10px ;">
-            &#x1F4C4; <a href="/match_register_form" >New...</a>
+            &#x1F4C4; <a href="/match_register_form" >Novo...</a>
           </Div>            
         </li>
         <% if (user_matches != undefined) { %>
@@ -46,38 +46,38 @@
 
 
   <div class="forms" style="background-color:#90b1df">
-    <h3>New Match</h3>
+    <h3>Nova Match</h3>
     <form id="match_register" action="/match_register" method="get">
       
       
         <Div style="text-align: left;">
-          <label for="name"> Match name</label>
-          <input id="name" name="name" placeholder="match name" style="margin: 2px" autofocus required type="text"></input><br>
+          <label for="name"> Nome da Match</label>
+          <input id="name" name="name" placeholder="Ex: Partida da Alê" style="margin: 2px" autofocus required type="text"></input><br>
           <input type="checkbox" id="checkbox1" name="checkbox1" value="0">
-          <label for="checkbox1"> Show options in shooting state</label><br>
+          <label for="checkbox1"> Mostrar alternativas enquanto ainda não foi clicado o botão de responder</label><br>
           <input type="checkbox" id="checkbox2" name="checkbox2" value="0">
-          <label for="checkbox2"> Start match upon completing registration</label><br>
-          <label for="quantity1">Minimum number of players</label>
-          <input type="number" id="quantity1" name="quantity1" min="1" max="50"><br>
-          <label for="quantity2">Maximum number of players</label>
-          <input type="number" id="quantity2" name="quantity2" min="1" max="50"><br>
-          <label for="quantity3">Waiting time for registration at match (seconds)</label>
-          <input type="number" id="quantity3" name="quantity3" min="30" max="300"><br>
-          <label for="quantity4">Waiting time for the start of the match (seconds)</label>
-          <input type="number" id="quantity4" name="quantity4" min="30" max="300"><br>
+          <label for="checkbox2"> Começar match assim que o registro for completo</label><br>
+          <label for="quantity1"> Número mínimo de jogadores</label>
+          <input type="number" id="quantity1" name="quantity1" min="1" max="50" placeholder="Ex: 1"><br>
+          <label for="quantity2"> Número máximo de jogadores</label>
+          <input type="number" id="quantity2" name="quantity2" min="1" max="50" placeholder="Ex: 50"><br>
+          <label for="quantity3"> Tempo de espera para registro dos usuários na match (em segundos)</label>
+          <input type="number" id="quantity3" name="quantity3" min="30" max="300" placeholder="Ex: 30"><br>
+          <label for="quantity4"> Tempo de espera para o começo da match (em segundos)</label>
+          <input type="number" id="quantity4" name="quantity4" min="30" max="300" placeholder="Ex: 30"><br>
           <!-- <label for="quantity5">Wait time to shooting (seconds)</label>
           <input type="number" id="quantity5" name="quantity5" min="30" max="300"><br> -->
-          <label for="quantity6">Waiting time to start the next round (seconds)</label>
-          <input type="number" id="quantity6" name="quantity6" min="30" max="300"><br>
-          <label for="quantity7">Waiting time to resume the round (seconds)</label>
-          <input type="number" id="quantity7" name="quantity7" min="30" max="300"><br>
-          <label for="quantity8">Waiting time to end the match (seconds)</label>
-          <input type="number" id="quantity8" name="quantity8" min="30" max="300"><br>
-          <label for="quantity9">Waiting time to destroy the match (seconds)</label>
-          <input type="number" id="quantity9" name="quantity9" min="30" max="300"><br>
+          <label for="quantity6"> Tempo de espera para o começo do próximo round (em segundos)</label>
+          <input type="number" id="quantity6" name="quantity6" min="30" max="300" placeholder="Ex: 30"><br>
+          <label for="quantity7"> Tempo de espera para o resumo do round (em segundos)</label>
+          <input type="number" id="quantity7" name="quantity7" min="30" max="300" placeholder="Ex: 30"><br>
+          <label for="quantity8"> Tempo de espera para o fim da match (em segundos)</label>
+          <input type="number" id="quantity8" name="quantity8" min="30" max="300" placeholder="Ex: 30"><br>
+          <label for="quantity9"> Tempo de espera para apagar a match (em segundos)</label>
+          <input type="number" id="quantity9" name="quantity9" min="30" max="300" placeholder="Ex: 30"><br>
         </Div>
       
-      <button id="register_btn" type="submit" style="margin: 10px;">Register</button>
+      <button id="register_btn" type="submit" style="margin: 10px;">Criar</button>
     </form>
   </div>
 
@@ -89,9 +89,9 @@
     <% if (user != undefined) { %>
     <p style="margin: 0px;padding: 0;"> <%= user.name %> </p>
     <p style="font-size:50%;margin: 0px;padding: 0;"> <%= user.email %> </p>
-    <a href="/user_logout"> logout </a>
+    <a href="/user_logout"> Sair </a>
     <%} else { %>
-    <a style="margin: 0px;padding: 0;" href="/user_login_form"> login </a>
+    <a style="margin: 0px;padding: 0;" href="/user_login_form"> Faça login </a>
     <% } %>
   </div>
 
