--- a/Projeto/src/app/views/question_edit_form.ejs
+++ b/Projeto/src/app/views/question_edit_form.ejs
@@ -20,13 +20,13 @@
   <div  style="overflow:auto;background-color:#90b1df;margin-top:7px;">
 
     <div class="left" style="background-color:#90b1df">
-      <h3><%= user_quizzes[quiz_key].name %></h3>
+      <h3><a href="/quiz_view" style="text-decoration: none;">&#x1F519</a> <%= user_quizzes[quiz_key].name %></h3>
       <h4><%= user_quizzes[quiz_key].theme %></h4>
-      <h4">Questions</h4>
+      <h4">Questões</h4>
       <ul>
         <li> 
           <Div>
-            <a href= <%= "/question_register_form?quiz_key=" + quiz_key %>> New... </a>
+            <a href= <%= "/question_register_form?quiz_key=" + quiz_key %>> Novo... </a>
           </Div>            
         </li>
         <% if (user_quizzes != undefined && quiz_key in user_quizzes) { %>
@@ -36,11 +36,11 @@
                 <p style="font-size:75%;margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_quizzes[quiz_key].questions[question_key].description %>  <a href= <%= "/question_edit_form?quiz_key=" + quiz_key + "&question_key=" + question_key %> style="text-decoration: none;"> &#9998 </a></p>
                 <ul style="list-style-type: none;margin: 0;padding: 0;">
                   <li>
-                    <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em ;">True Option:  <%= user_quizzes[quiz_key].questions[question_key].true_option %> </p>
+                    <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em ;">Opção Certa:  <%= user_quizzes[quiz_key].questions[question_key].true_option %> </p>
                   </li>
                   <% for(var i=0; i < user_quizzes[quiz_key].questions[question_key].fake_options.length; i++) {%>
                     <li>
-                      <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em; color:#e10e1c;"> Fake Option<%= i + 1 %> :  <%= user_quizzes[quiz_key].questions[question_key].fake_options[i] %> </p>
+                      <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em; color:#e10e1c;"> Opção Errada <%= i + 1 %>: <%= user_quizzes[quiz_key].questions[question_key].fake_options[i] %> </p>
                     </li>                    
                   <% } %>
                 </ul>                
@@ -55,7 +55,7 @@
 
 
 
-      <h3>Edit Question</h3>
+      <h3>Editar Questão</h3>
       <form id="quiz_register" action=<%= "/question_edit?quiz_key=" + quiz_key + "&question_key=" + question_key%> method="get">
         <input id="quiz_key" name="quiz_key" type="hidden" value= <%= quiz_key %> >
         <input id="question_key" name="question_key" type="hidden" value= <%= question_key %> >
@@ -88,7 +88,7 @@
 
         <% } %>
 
-        <button id="register_btn" type="submit" style="width:50%; margin: 5px">Register</button>
+        <button id="register_btn" type="submit" style="width:50%; margin: 5px">Editar</button>
       </form>
     </div>
 
@@ -100,9 +100,9 @@
     <% if (user != undefined) { %>
       <p style="margin: 0px;padding: 0;"> <%= user.name %> </p>
       <p style="font-size:50%;margin: 0px;padding: 0;"> <%= user.email %> </p>
-      <a href="/user_logout"> logout </a>
+      <a href="/user_logout"> Sair </a>
       <%} else { %>
-      <a style="margin: 0px;padding: 0;" href="/user_login_form"> login </a>
+      <a style="margin: 0px;padding: 0;" href="/user_login_form"> Faça login </a>
       <% } %>
   </div>
 
