--- a/Projeto/src/app/views/question_register_form.ejs
+++ b/Projeto/src/app/views/question_register_form.ejs
@@ -20,11 +20,11 @@
   <div  style="overflow:auto;background-color:#90b1df;margin-top:7px;">
 
     <div class="left" style="background-color:#90b1df">
-      <h3>Quizzes</h3>
+      <h3><a href="/quiz_view" style="text-decoration: none;">&#x1F519</a> Quizzes</h3>
       <ul>
         <li> 
           <Div>
-            <a href="/quiz_register_form" > New... </a>
+            <a href="/quiz_register_form" > Novo... </a>
           </Div>            
         </li>
         <% if (user_quizzes != undefined) { %>
@@ -41,15 +41,15 @@
     </div>
 
     <div class="forms" style="background-color:#90b1df">
-      <h3>New Question</h3>
+      <h3>Nova Questão</h3>
       <form id="quiz_register" action=<%= "/question_register?quiz_key=" + quiz_key %> method="get">
         <input id="quiz_key" name="quiz_key" type="hidden" value= <%= quiz_key %> >
-        <textarea id="description" name="description" placeholder="question description" style="width:50%; margin: 2px" required autofocus></textarea><br>
-        <textarea id="true_option" name="true_option" placeholder="true option" style="width:50%; margin: 2px" required></textarea><br>
-        <textarea id="fake_option1" name="fake_option1" placeholder="fake option1" style="width:50%; margin: 2px" required></textarea><br>
-        <textarea id="fake_option2" name="fake_option2" placeholder="fake option2" style="width:50%; margin: 2px"></textarea><br>
-        <textarea id="fake_option3" name="fake_option3" placeholder="fake option3" style="width:50%; margin: 2px"></textarea><br>
-        <button id="register_btn" type="submit" style="width:50%; margin: 5px">Register</button>
+        <textarea id="description" name="description" placeholder="Descrição da questão" style="width:50%; margin: 2px" required autofocus></textarea><br>
+        <textarea id="true_option" name="true_option" placeholder="Opção certa" style="width:50%; margin: 2px" required></textarea><br>
+        <textarea id="fake_option1" name="fake_option1" placeholder="Opção errada1" style="width:50%; margin: 2px" required></textarea><br>
+        <textarea id="fake_option2" name="fake_option2" placeholder="Opção errada2" style="width:50%; margin: 2px"></textarea><br>
+        <textarea id="fake_option3" name="fake_option3" placeholder="Opção errada3" style="width:50%; margin: 2px"></textarea><br>
+        <button id="register_btn" type="submit" style="width:50%; margin: 5px">Criar</button>
       </form>
     </div>
 
@@ -61,9 +61,9 @@
     <% if (user != undefined) { %>
       <p style="margin: 0px;padding: 0;"> <%= user.name %> </p>
       <p style="font-size:50%;margin: 0px;padding: 0;"> <%= user.email %> </p>
-      <a href="/user_logout"> logout </a>
+      <a href="/user_logout"> Sair </a>
       <%} else { %>
-      <a style="margin: 0px;padding: 0;" href="/user_login_form"> login </a>
+      <a style="margin: 0px;padding: 0;" href="/user_login_form"> Faça login </a>
       <% } %>
   </div>
 
