--- a/Projeto/src/app/views/quiz_register_form.ejs
+++ b/Projeto/src/app/views/quiz_register_form.ejs
@@ -43,11 +43,11 @@
     
 
     <div class="forms" style="background-color:#90b1df">
-      <h3>New Quiz</h3>
+      <h3>Novo Quiz</h3>
       <form id="quiz_register" action="/quiz_register" method="get">
-        <input id="name" name="name"  placeholder="quiz name" style="width:50%; margin: 2px" autofocus required type="text"></input><br>
-        <textarea id="theme" name="theme" placeholder="quiz theme" style="width:50%; margin: 2px" required></textarea><br>
-        <button id="register_btn" type="submit" style="width:50%; margin: 10px;">Register</button>
+        <input id="name" name="name"  placeholder="Nome do quiz" style="width:50%; margin: 2px" autofocus required type="text"></input><br>
+        <textarea id="theme" name="theme" placeholder="Tema do quiz" style="width:50%; margin: 2px" required></textarea><br>
+        <button id="register_btn" type="submit" style="width:50%; margin: 10px;">Registrar</button>
       </form>
     </div>
 
@@ -59,9 +59,9 @@
     <% if (user != undefined) { %>
       <p style="margin: 0px;padding: 0;"> <%= user.name %> </p>
       <p style="font-size:50%;margin: 0px;padding: 0;"> <%= user.email %> </p>
-      <a href="/user_logout"> logout </a>
+      <a href="/user_logout"> Sair </a>
       <%} else { %>
-      <a style="margin: 0px;padding: 0;" href="/user_login_form"> login </a>
+      <a style="margin: 0px;padding: 0;" href="/user_login_form"> Faça login </a>
       <% } %>
   </div>
 
