--- a/Projeto/src/app/views/match_view.ejs
+++ b/Projeto/src/app/views/match_view.ejs
@@ -19,7 +19,7 @@
   <div  style="overflow:auto;background-color:#90b1df;margin-top:7px;">
 
     <div class="left" style="background-color:#90b1df">
-      <h3 style="margin: 0px;padding: 0;"><a href="/match_home" style="text-decoration: none;">&#x1F519</a>Matches</h3>
+      <h3 style="margin: 0px;padding: 0px;"><a href="/match_home" style="text-decoration: none;">&#x1F519;</a> Matches</h3>
       <ul style="list-style-type: none; margin: 10px;padding: 0;">
         <li> 
           <Div  style="padding-bottom: 10px ;">
@@ -31,7 +31,10 @@
               <li> 
                 <Div>
                   &#x1F50E <a href= <%= "/match_view?match_key=" + key %> style="text-decoration: none;"> <%= user_matches[key].name %> </a>
-                  <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_matches[key].theme %> </p>
+                  <a href=<%= "/match_edit_form?match_key=" + key %> style="text-decoration: none;">
+                    &#9998;
+                  </a>
+                  <p  style="font-size:50%;margin-top: 0px ; margin-bottom: 5px; margin-left: 25px;"> <%= user_matches[key].theme %> </p>
                 </Div>                
               </li>
           <% } %>
@@ -40,7 +43,7 @@
     </div>
 
     <div class="main">
-      <h3 style="padding: 0;"><%= user_matches[match_key].name %></h3>
+      <h3 style="margin: 0px;padding: 0px;"><%= "Match: " + user_matches[match_key].name %></h3>
       <Div  style="padding-bottom: 10px ;">
         <a href=<%= "/match_launch?match_key=" + match_key + "&match_name=" %> style="text-decoration: none;" >&#x1F680;</a>
         <a href=<%= "/match_edit_form?match_key=" + match_key %> style="text-decoration: none;">&#x1F4DD;</a>
