--- a/Projeto/src/app/public/stylesheets/style.css
+++ b/Projeto/src/app/public/stylesheets/style.css
@@ -5,13 +5,14 @@
 .main {
   float: left;
   width: 40%;
-  padding: 0 20px;
+  padding: 5px;
+  margin-top: 7px;
 }
 
 .right {
   float: left;
   width: 30%;
-  padding: 15px;
+  padding: 5px;
   margin-top: 7px;
   text-align: center;
 }
@@ -19,7 +20,7 @@
 .left {
   float: left;
   width: 30%;
-  padding: 15px;
+  padding: 5px;
   margin-top: 7px;
   text-align: left;
 }
@@ -27,7 +28,7 @@
 .forms {
   float: left;
   width: 40%;
-  padding: 0 20px;
+  padding: 5px;
   margin-top: 7px;
   text-align: center;
 }
