--- a/Projeto/src/app/views/quiz_home.ejs
+++ b/Projeto/src/app/views/quiz_home.ejs
@@ -33,7 +33,7 @@
               <li> 
                 <Div>
                   &#x1F50E <a href= <%= "/quiz_view?quiz_key=" + key %> style="text-decoration: none;"> <%= user_quizzes[key].name %> </a>
-                  <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_quizzes[key].theme %> </p>
+                  <p style="font-size:50%;margin-top: 0px ; margin-bottom: 5px; margin-left: 25px;"> <%= user_quizzes[key].theme %> </p>
                 </Div>                
               </li>
           <% } %>
