--- a/Projeto/src/app/views/match_room.ejs
+++ b/Projeto/src/app/views/match_room.ejs
@@ -21,7 +21,7 @@
   <div  style="overflow:auto;background-color:#dde1be;margin-top:7px;">
 
     <div class="left" style="background-color:#dde1be">
-      <h3 style="margin: 0px;padding: 0;">Placar</h3>    
+      <h3 style="margin: 0px;padding: 0;"><a href="/" style="text-decoration: none;">&#x1F519</a> Placar</h3>    
       <ul id="scoreboard_list" style="list-style-type: none; margin: 10px;padding: 0;"></ul>
     </div>
 
