--- a/Projeto/src/app/views/round_edit_form.ejs
+++ b/Projeto/src/app/views/round_edit_form.ejs
@@ -64,12 +64,12 @@
   <div  style="overflow:auto;background-color:#90b1df;margin-top:7px;">
 
     <div class="left" style="background-color:#90b1df">
-      <h3 style="margin: 0px;padding: 0px;"><%= user_matches[match_key].name %></h3>
+      <h3 style="margin: 0px;padding: 0px;"><a href="/match_view" style="text-decoration: none;">&#x1F519</a> <%= user_matches[match_key].name %></h3>
     <h4">Rounds</h4>
       <ul>
         <li>
           <Div>
-            <a href=<%= "/round_register_form?match_key=" + match_key %>> New... </a>
+            <a href=<%= "/round_register_form?match_key=" + match_key %>> Novo... </a>
           </Div>
         </li>
         <% if (user_matches != undefined && match_key in user_matches) { %>
@@ -77,9 +77,9 @@
         <li>
           <Div>
             <p style="font-size:75%;margin-top: 0.0em ; margin-bottom: 0.0em ;">
-              <%= user_matches[match_key].rounds[round_key].question.description %> <a
-                href=<%= "/round_edit_form?match_key=" + match_key + "&round_key=" + round_key %>
-                style="text-decoration: none;"> &#9998 </a></p>
+              <%= user_matches[match_key].rounds[round_key].question.description %> <a href=<%= "/round_edit_form?match_key=" + match_key + "&round_key=" + round_key %> style="text-decoration: none;"> &#9998 </a>
+              <a onclick="return confirm('Tem certeza que deseja deletar esse round?');" href= <%= "/round_delete?match_key=" + match_key + "&round_key=" + round_key %> style="text-decoration: none;"> &#x274C; </a>
+            </p>
           </Div>
         </li>
         <% } %>
@@ -97,16 +97,16 @@
 
       <Div style="text-align: left;">
 
-        <label style="margin-top: 5px;" for="quantity1">Wait time to shooting (seconds)</label>
+        <label style="margin-top: 5px;" for="quantity1">Tempo de espera para o chute (em segundos)</label>
         <input type="number" id="quantity1" name="quantity1" min="3" max="300"
           value=<%= user_matches[match_key].rounds[round_key].shooting_timeout / 1000%>><br>
-        <label for="quantity2">Wait time to response (seconds)</label>
+        <label for="quantity2">Tempo de espera para a resposta (em segundos)</label>
         <input type="number" id="quantity2" name="quantity2" min="3" max="300"
           value=<%= user_matches[match_key].rounds[round_key].response_timeout  / 1000%>><br>
-        <label for="quantity3">Wait time to pass (seconds)</label>
+        <label for="quantity3">Tempo de espera para passar (em segundos)</label>
         <input type="number" id="quantity3" name="quantity3" min="3" max="300"
           value=<%= user_matches[match_key].rounds[round_key].pass_timeout  / 1000%>><br>
-        <label for="quantity4">Score</label>
+        <label for="quantity4">Pontuação</label>
         <input type="number" id="quantity4" name="quantity4" min="1" max="10"
           value=<%= user_matches[match_key].rounds[round_key].score %>><br>
 
@@ -116,7 +116,7 @@
 
         <p><%=user_matches[match_key].rounds[round_key].question.description%></p>
 
-        <h6 style="margin-top: 20px;margin-bottom: 0px;  padding: 5px;">(reselect the quiz and question if desired)</h6>
+        <h6 style="margin-top: 20px;margin-bottom: 0px;  padding: 5px;">(selecione novamente o quiz e a questão, se quiser)</h6>
         <h4 style="margin: 0;padding: 5px;">Quizzes</h4>
         
         <ul style="list-style-type: none; margin: 10px;padding: 0;">
@@ -153,7 +153,7 @@
 
       </Div>
 
-      <button id="register_btn" type="submit" style="width:50%; margin: 5px">Register</button>
+      <button id="register_btn" type="submit" style="width:50%; margin: 5px">Editar</button>
     </form>
   </div>
 
@@ -165,9 +165,9 @@
     <% if (user != undefined) { %>
     <p style="margin: 0px;padding: 0;"> <%= user.name %> </p>
     <p style="font-size:50%;margin: 0px;padding: 0;"> <%= user.email %> </p>
-    <a href="/user_logout"> logout </a>
+    <a href="/user_logout"> Sair </a>
     <%} else { %>
-    <a style="margin: 0px;padding: 0;" href="/user_login_form"> login </a>
+    <a style="margin: 0px;padding: 0;" href="/user_login_form"> Faça login </a>
     <% } %>
   </div>
 
