--- a/Projeto/src/app/views/round_register_form.ejs
+++ b/Projeto/src/app/views/round_register_form.ejs
@@ -60,11 +60,11 @@
 
     <div class="left" style="background-color:#90b1df">
       
-      <h3 style="margin: 0px;padding: 0;"><a href="/" style="text-decoration: none;">&#x1F519</a>  Matches</h3>
+      <h3 style="margin: 0px;padding: 0;"><a href="/match_view" style="text-decoration: none;">&#x1F519</a>  Matches</h3>
       <ul style="list-style-type: none; margin: 10px;padding: 0;">
         <li> 
           <Div  style="padding-bottom: 10px ;">
-            &#x1F4C4; <a href="/match_register_form" >New...</a>
+            &#x1F4C4; <a href="/match_register_form" >Novo...</a>
           </Div>            
         </li>
         <% if (user_matches != undefined) { %>
@@ -82,20 +82,20 @@
   </div>
 
   <div class="forms" style="background-color:#90b1df">
-    <h3>New Round</h3>
+    <h3>Novo Round</h3>
     <form id="round_register" action=/round_register method="get">
 
       <input id="match_key" name="match_key" type="hidden" value=<%= match_key %>>
 
       <Div style="text-align: left;">
 
-        <label for="quantity1">Wait time to shooting (seconds)</label>
+        <label for="quantity1"> Tempo de espera para o chute (em segundos)</label>
         <input type="number" id="quantity1" name="quantity1" min="3" max="300"><br>
-        <label for="quantity2">Wait time to response (seconds)</label>
+        <label for="quantity2"> Tempo de espera para a resposta (em segundos)</label>
         <input type="number" id="quantity2" name="quantity2" min="3" max="300"><br>
-        <label for="quantity3">Wait time to pass (seconds)</label>
+        <label for="quantity3"> Tempo de espera para passar (em segundos)</label>
         <input type="number" id="quantity3" name="quantity3" min="3" max="300"><br>
-        <label for="quantity4">Score</label>
+        <label for="quantity4">Pontuação</label>
         <input type="number" id="quantity4" name="quantity4" min="1" max="10"><br>
 
 
@@ -140,7 +140,7 @@
 
 
 
-      <button id="register_btn" type="submit" style="width:50%; margin: 5px">Register</button>
+      <button id="register_btn" type="submit" style="width:50%; margin: 5px">Criar</button>
 
     </form>
   </div>
@@ -153,9 +153,9 @@
     <% if (user != undefined) { %>
     <p style="margin: 0px;padding: 0;"> <%= user.name %> </p>
     <p style="font-size:50%;margin: 0px;padding: 0;"> <%= user.email %> </p>
-    <a href="/user_logout"> logout </a>
+    <a href="/user_logout"> Sair </a>
     <%} else { %>
-    <a style="margin: 0px;padding: 0;" href="/user_login_form"> login </a>
+    <a style="margin: 0px;padding: 0;" href="/user_login_form"> Faça login </a>
     <% } %>
   </div>
 
